--- a/client/src/components/Products-details/ProductsPanel/ProductsDetailsList/styles/_products-panel-show.scss
+++ b/client/src/components/Products-details/ProductsPanel/ProductsDetailsList/styles/_products-panel-show.scss
@@ -161,6 +161,11 @@
      }
 }
 
-
-
-
+@media screen and (max-width:840px){
+     .details__products__container{
+          .products__panel{
+               width: 100%;
+          }
+          
+     }
+ }
