--- a/client/src/components/Base/Navigation/styles/_search-product.scss
+++ b/client/src/components/Base/Navigation/styles/_search-product.scss
@@ -10,7 +10,7 @@
          align-items: center;
          .search__products{
               position: relative;
-              width: 50%;
+              width: 43%;
               padding: 17px;
               .search-input{
                    height: 25px;
@@ -18,7 +18,6 @@
                    position: absolute;
                    top: -16px;
                    left: 0;
-                   width: 50%;
                }
                .search-button{
                     
@@ -43,9 +42,9 @@
                     position: absolute;
                     top: 42px;
                     text-align: center;
-                    width: 100%;
+                    width: 67%;
                     border-radius: 5px;
-                    height: 100px;
+                    height: 60px;
                     overflow-y: auto;
                     left: 0;
                     z-index: 99999;
@@ -76,12 +75,27 @@
 }
 
 
+@media screen and (max-width: 1440px) {
+     .search__area{
+          .search__part{
+               .search__products{
+                    .search__items{
+                         width: 89%;
+                    }
+               }
+          }
+     }
+ }
 @media screen and (max-width: 1024px) {
      .search__area{
           .search__part{
                .search__products{
+                    width: 47%;
                     .search-input{
                          font-size: 1.8vw;
+                    }
+                    .search__items{
+                         width: 100%;
                     }
                }
           }
@@ -95,6 +109,9 @@
                .search__products{
                     .search-input{
                          font-size: 1.8vw;
+                    }
+                    .search__items{
+                         width: 72%;
                     }
                }
           }
@@ -111,6 +128,9 @@
                     .search-input{
                          font-size: 2.2vw;
                     }
+                    .search__items{
+                         width:87%;
+                    }
                }
           }
      }
@@ -123,6 +143,10 @@
                .search__products{
                     .search-input{
                          font-size: 3vw;
+                    }
+                    .search__items{
+                         width: 92%;
+
                     }
                }
           }
@@ -148,6 +172,9 @@
                .search__products{
                     .search-input{
                          font-size: 5vw;
+                    }
+                    .search__items{
+                         width: 115%;
                     }
                }
           }
