--- a/client/src/components/Cart/Order/styles/_buy.scss
+++ b/client/src/components/Cart/Order/styles/_buy.scss
@@ -10,12 +10,18 @@
           margin: 0 auto;
          display: flex;
          flex-direction: column;
-         width: 23%;
+         width: 40%;
          align-items: center;
          flex-wrap: wrap;
          align-items: center;
          .order__block{
               width: 100%;
+              display: flex;
+              flex-wrap: wrap;
+              flex-direction: column;
+              input{
+                   flex: 1 0 3rem;
+              }
          }
          .order__input__item {
               margin: 10px 0;
@@ -38,3 +44,40 @@
 
 }
 
+@media screen and (max-width:1280px) {
+     .order__info{
+          width: 120vw;
+     }
+}
+@media screen and (max-width:1024px) {
+     .order__info{
+          width: 150vw;
+     }
+ }
+@media screen and (max-width:840px) {
+     .order__info{
+          width: 190vw;
+     }
+ }
+ @media screen and (max-width:648px) {
+     .order__info{
+          width: 200vw;
+     }
+ }
+ @media screen and (max-width: 480px) {
+     .order__info{
+         width: 220vw;
+     }
+ }
+   
+ @media screen and (max-width:360px) {
+     .order__info{
+          width: 250vw;
+     }
+ }
+ @media screen and (max-width:320px) {
+     .order__info{
+          width: 280vw;
+     }
+ }
+ 
