--- a/client/src/components/Home/ProductsList/styles/_products__list.scss
+++ b/client/src/components/Home/ProductsList/styles/_products__list.scss
@@ -1,30 +1,77 @@
 .products__list{
-
+     .products-list{
+           margin-top: 50px;
+           width: 100%;
+           display: flex;
+           flex-wrap: wrap;
+           align-content: center;
+           align-items: center;
+           height: auto;
+           gap: 70px;
+           justify-content: space-evenly;
+     }
 }
 
 @media screen and (max-width:1280px){
      .products__list{
           width: 120vw;
+          .products-list{
+               gap:50px;
+               justify-content: center;
+          }
      }
  }
+ @media screen and (max-width:1140px){
+     .products__list{
+          .products-list{
+               gap:15px;
+          }
+     }
+}
+
 @media screen and (max-width:1024px){
      .products__list{
           width: 140vw;
      }
  }
+@media screen and (max-width:996px){
+     .products__list{
+          .products-list{
+               gap:30px;
+           
+           }
+     }
+ }
  @media screen and (max-width:840px){
       .products__list{
-           width: 190vw;
+          width: 190vw;
+          .products-list{
+               gap:25px;
+          }
       }
   }
+ @media screen and (max-width:768px){
+      .products__list{
+          .products-list{
+               gap:25px;
+          }
+      }
+  }
+
  @media screen and (max-width:648px){
       .products__list{
+          .products-list{
+               gap:50px;
+          }
            width: 200vw;
       }
   }
  @media screen and (max-width:480px){
       .products__list{
            width: 220vw;
+           .products-list{
+               gap:25px;
+          }
       }
   }
  @media screen and (max-width:360px){
@@ -35,5 +82,8 @@
  @media screen and (max-width:320px){
       .products__list{
            width: 280vw;
+           .products-list{
+               gap:30px;
+           }
       }
   }
