--- a/client/src/components/Products-details/AdsBannerPanel/styles/_ads-banner-panel.scss
+++ b/client/src/components/Products-details/AdsBannerPanel/styles/_ads-banner-panel.scss
@@ -1,28 +1,75 @@
-.ads__banner__panel__container{
-     background-color: #3f3f3f;
-     height: 150px;
-     display: flex;
-     flex-wrap: wrap;
-     flex-direction: column;
-     justify-content: center;
-     align-items: center;
+.ads__banner__panel{
+    background-color: #3f3f3f;
 
-     h3{
-          font-size: 54px;
-          color: var(--white);
-          padding: 10px 10px 0 10px;
-          span{
-               font-weight: bold;
+     .ads__banner__panel__container{
+          height: 150px;
+          display: flex;
+          flex-wrap: wrap;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+
+          h3{
+               font-size: 54px;
+               color: var(--white);
+               padding: 10px 10px 0 10px;
+               span{
+                    font-weight: bold;
+               }
           }
-     }
-     h5{
-          color: #fff;
-          font-size: 24px;
-          letter-spacing: 12px;
-          padding: 0 10px 10px 10px;
-          font-weight: 300;
-          span{
-               color: var(--orange);
+          h5{
+               color: #fff;
+               font-size: 24px;
+               letter-spacing: 12px;
+               padding: 0 10px 10px 10px;
+               font-weight: 300;
+               span{
+                    color: var(--orange);
+               }
           }
+     }    
+}
+@media screen and (max-width: 1280px) {
+    .ads__banner__panel{
+        width: 120vw;
+
+    }
+}
+@media screen and (max-width:1024px) {
+    .ads__banner__panel{
+         width: 150vw;
+    }
+}
+@media screen and (max-width: 992px) {
+    .ads__banner__panel{
+    }
+}
+  
+@media screen and (max-width: 840px) {
+     .ads__banner__panel{
+         width: 190vw;
+         //font-size: 20px;
      }
+ }
+@media screen and (max-width: 648px) {
+    .ads__banner__panel{
+        width: 200vw;
+    }
+}
+  
+@media screen and (max-width: 480px) {
+    .ads__banner__panel{
+        width: 220vw;
+    }
+}
+@media screen and (max-width: 360px) {
+    .ads__banner__panel{
+        width: 250vw;
+    }
+}
+  
+@media screen and (max-width: 320px) {
+    .ads__banner__panel{
+        width: 280vw;
+    }
 }
