--- a/client/src/components/Products-details/CategoriesPanel/CategoriesFilterPrice/styles/_categories-filter-price.scss
+++ b/client/src/components/Products-details/CategoriesPanel/CategoriesFilterPrice/styles/_categories-filter-price.scss
@@ -13,12 +13,12 @@
           margin-top: 20px;
           height: 30px;
           .ranges{
-               width: 10px;
-               height: 10px;
+               width: 20px;
+               height: 20px;
                border: 3px solid var(--orange);
                border-radius: 50%;
                position: absolute;
-               top: 12%;
+               //top: 12%;
                z-index: 99998;
                background-color: var(--white);
           }
